end testing css to fix overlapping problems

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 body {
-    /*margin: 0;
+    margin: 0;
     padding:0;
-    font-size: 28px;*/
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(12, 55, 90,0.5) !important;
     height: 100vh;
